cards z-index fixe

--- a/TheSerifsAndScribes_MP/Styles/TransparencyStyle.css
+++ b/TheSerifsAndScribes_MP/Styles/TransparencyStyle.css
@@ -99,6 +99,10 @@ html, body, #form1 {
     margin-top: -80px;
 }
 
+.trans-card {
+    z-index: 1;
+}
+
 .cards-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
